[package]
name = "latticearc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "LatticeArc - Post-Quantum Cryptography Library"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true

# Inherit all lints from workspace
[lints]
workspace = true

[dependencies]
# Core crates - all always included
arc-primitives = { version = "0.1.1", path = "../arc-primitives" }
arc-core = { version = "0.1.1", path = "../arc-core" }
arc-prelude = { version = "0.1.1", path = "../arc-prelude" }
arc-zkp = { version = "0.1.1", path = "../arc-zkp" }
arc-hybrid = { version = "0.1.1", path = "../arc-hybrid" }
arc-tls = { version = "0.1.1", path = "../arc-tls" }
arc-perf = { version = "0.1.1", path = "../arc-perf" }

# Unified API dependencies
zeroize = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
k256 = { workspace = true }
aws-lc-rs = { workspace = true }  # FIPS 140-3 validated crypto (AES-GCM, HKDF)
hmac = { workspace = true }
sha3 = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }

# Performance optimizations
rayon = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
crossbeam-utils = { workspace = true }

# Time handling
chrono = { workspace = true }

# Tracing and logging
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }

[lib]
path = "src/lib.rs"
